update text in index.html for clarity and consistency

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <h1>Akan Name Generator</h1>
-        <p>Enter your birthdate and gender to find your Akan name.</p>
+        <p>Enter your birthdate and gender to locate your Akan name.</p>
         <form id="akanForm">
             <label for="birthdate">Birthdate:</label>
             <input type="date" id="birthdate" name="birthdate" required>
@@ -20,7 +20,7 @@
             <label><input type="radio" name="gender" value="male"> Male</label>
             <label><input type="radio" name="gender" value="female"> Female</label>
 
-            <button type="submit">Get Akan Name</button>
+            <button type="submit">Get Your Akan Name</button>
         </form>
         <div id="result"></div>
     </div>
