update text in index.html for clarity and consistency

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <h1>Akan Name Generator</h1>
-        <p>Enter your birthdate and gender to locate your Akan name.</p>
+        <p>Enter your Birthdate and Gender to locate your respective Akan name.</p>
         <form id="akanForm">
             <label for="birthdate">Birthdate:</label>
             <input type="date" id="birthdate" name="birthdate" required>
